basic about page layout complete.

--- a/CarneAsada.html
+++ b/CarneAsada.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="cooking.css" />
     <link rel="stylesheet" href="./assets/css/style.css" />
     <script src="https://cdn.tailwindcss.com"></script>
-    <script defer src="./assets/js/homepage.js"></script>
+    <script defer src="./assets/js/menu.js"></script>
   </head>
   <body class="carneAsada-bg relative">
     <header
