--- a/about.html
+++ b/about.html
@@ -35,6 +35,141 @@
       />
     </header>
     <div id="menuContainer"></div>
-    <main></main>
+    <main class="flex flex-col">
+      <section
+        class="m-4 p-4 bg-white bg-opacity-80 text-gray-900 rounded w-max mx-auto"
+      >
+        <h1 class="text-4xl font-medium">Project Contributors:</h1>
+      </section>
+      <section class="flex flex-row gap-4 m-4 p-4">
+        <section
+          class="flex flex-col items-center m-4 p-4 bg-white bg-opacity-80 text-gray-900 rounded max-w-fit mx-auto"
+        >
+          <img class="bioImage" src="" alt="" />
+          <h2 class="m-2 p-2 text-4xl font-medium">Mason Ott</h2>
+          <p class="">
+            Mason Ott, a coding bootcamp student living in Utah, juggles his
+            days between decoding JavaScript bugs and deciphering the mysterious
+            world of toddler tantrums, thanks to his spirited daughter. When he
+            is not wrestling with lines of code or dad jokes, he is busy
+            impressing his wife with his culinary masterpieces, which are mostly
+            just variations of instant ramen. A gamer at heart, Mason often
+            finds himself sneaking in some late-night gaming sessions,
+            perfecting his skills while pretending he has got it all figured
+            out. His life is a whirlwind of semicolons, snack time, and sneakily
+            googling “how to be a coding wizard.”
+          </p>
+          <section class="flex flex-row justify-center m-4">
+            <a
+              href="mailto:mason.xavier.ott@gmail.com"
+              class="m-2 p-2 bg-gray-800 bg-opacity-30 text-white rounded"
+              target="_blank"
+              >Email</a
+            >
+            <a
+              href="https://github.com/MaceOtt"
+              class="m-2 p-2 bg-gray-800 bg-opacity-30 text-white rounded"
+              target="_blank"
+              >GitHub Profile</a
+            >
+            <a
+              href="https://www.linkedin.com"
+              class="m-2 p-2 bg-gray-800 bg-opacity-30 text-white rounded"
+              target="_blank"
+              >LinkedIn</a
+            >
+          </section>
+        </section>
+        <section
+          class="flex flex-col items-center m-4 p-4 bg-white bg-opacity-80 text-gray-900 rounded max-w-fit mx-auto"
+        >
+          <img class="bioImage" src="" alt="" />
+          <h2 class="m-2 p-2 text-4xl font-medium">Jesse Anderson</h2>
+          <p>
+            Jesse Anderson, a coding bootcamp student and proud bachelor living
+            in Utah, has the unique distinction of working in a cave—literally.
+            By day, he navigates the stalagmites and stalactites of both the
+            underground and the digital realm, coding away with only bats for
+            company and Wi-Fi that sometimes feels prehistoric. His evenings are
+            a mix of debugging code and dodging cave crickets, all while
+            mastering the art of singlehood with a sense of humor as dry as the
+            cave air. Jesse’s life is a comedic blend of spelunking and syntax
+            errors, proving that even in the depths of a cave, one can still
+            aspire to be a tech wizard.
+          </p>
+          <section class="flex flex-row justify-center m-4">
+            <a
+              href="mailto:lmntrylmnt@gmail.com"
+              class="m-2 p-2 bg-gray-800 bg-opacity-30 text-white rounded"
+              target="_blank"
+              >Email</a
+            >
+            <a
+              href="https://github.com/Vtencouchclimbr"
+              class="m-2 p-2 bg-gray-800 bg-opacity-30 text-white rounded"
+              target="_blank"
+              >GitHub Profile</a
+            >
+            <a
+              href="https://www.linkedin.com"
+              class="m-2 p-2 bg-gray-800 bg-opacity-30 text-white rounded"
+              target="_blank"
+              >LinkedIn</a
+            >
+          </section>
+        </section>
+        <section
+          class="flex flex-col items-center m-4 p-4 bg-white bg-opacity-80 text-gray-900 rounded max-w-fit mx-auto"
+        >
+          <img class="bioImage" src="" alt="" />
+          <h2 class="m-2 p-2 text-4xl font-medium">Ian Ferguson</h2>
+          <p>
+            Ian Ferguson, an Arizona resident and former race car driver, now
+            channels his need for speed into the fast lane of coding bootcamp.
+            Balancing life as a small-business owner, husband, and dad to a
+            lively daughter and two dogs, Ian’s world is a high-octane blend of
+            family fetch games and JavaScript sprints. While he no longer burns
+            rubber on the track, he still finds thrills in debugging code and
+            dodging toddler toys at home. With a pit crew of a loving wife, a
+            spirited daughter, and two loyal canines, Ian’s life is a hilarious
+            race against time, proving that whether on the track or behind a
+            keyboard, he is always in the driver’s seat.
+          </p>
+          <section class="flex flex-row justify-center m-4">
+            <a
+              href="mailto:iansterlingferguson@gmail.com"
+              class="m-2 p-2 bg-gray-800 bg-opacity-30 text-white rounded"
+              target="_blank"
+              >Email</a
+            >
+            <a
+              href="https://github.com/TEMPTAG"
+              class="m-2 p-2 bg-gray-800 bg-opacity-30 text-white rounded"
+              target="_blank"
+              >GitHub Profile</a
+            >
+            <a
+              href="https://www.linkedin.com/in/ianferguson/"
+              class="m-2 p-2 bg-gray-800 bg-opacity-30 text-white rounded"
+              target="_blank"
+              >LinkedIn</a
+            >
+          </section>
+        </section>
+      </section>
+      <section
+      class="flex flex-col items-center m-4 p-4 bg-white bg-opacity-80 text-gray-900 rounded max-w-fit mx-auto"
+    >
+      <h2 class="m-2 p-2 text-4xl font-medium">Project GitHub Repository:</h2>
+      <section class="flex flex-row justify-center m-4">
+        <a
+          href="https://github.com/TEMPTAG/Project-1"
+          class="p-2 bg-gray-800 bg-opacity-30 text-white rounded"
+          target="_blank"
+          >Project 1</a
+        >
+      </section>
+
+    </main>
   </body>
 </html>
