--- a/recipe-BirriaBeef.html
+++ b/recipe-BirriaBeef.html
@@ -14,7 +14,7 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css"
     />
-    <script defer src="./assets/js/homepage.js"></script>
+    <script defer src="./assets/js/menu.js"></script>
   </head>
   <body class="birria-bg relative">
     <header
