--- a/recipe-AlPastor.html
+++ b/recipe-AlPastor.html
@@ -15,7 +15,7 @@
       href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css"
     />
     <script defer src="./assets/js/script.js"></script>
-    <script defer src="./assets/js/homepage.js"></script>
+    <script defer src="./assets/js/menu.js"></script>
   </head>
   <body class="alPastor-bg relative">
     <header
