theme switcher active and saving to local storage.  Started tailwind.config file and functionality.

--- a/index.html
+++ b/index.html
@@ -11,9 +11,11 @@
     />
     <link rel="stylesheet" href="./assets/css/style.css" />
     <script src="https://cdn.tailwindcss.com"></script>
+    <script src="./assets/js/tailwind.config.js"></script>
     <script defer src="./assets/js/menu.js"></script>
+    <script defer src="./assets/js/theme.js"></script>
   </head>
-  <body class="homepage-bg relative">
+  <body class="homepage-bg relative text-black dark:text-white">
     <header>
       <button
         id="menuButton"
