updated timers/chef notes in all cooking HTMLs

--- a/AlPastor.html
+++ b/AlPastor.html
@@ -53,7 +53,7 @@
         </p>
       <br>
         <p>
-          2.Once lightly browned, add the seeded and stemmed guajillo chiles and bay leaves. Saute for 1-2 minutes. <button class="text-black bg-red-200 hover:bg-red-300 font-medium rounded-full text-sm px-5 text-center">Timer</button>
+          2.Once lightly browned, add the seeded and stemmed guajillo chiles and bay leaves. Saute for 1-2 minutes. <button class="text-black bg-orange-200 hover:bg-orange-300 font-medium rounded-full text-sm px-5 text-center">Timer</button>
         </p>
       <br>
         <p>
@@ -61,7 +61,7 @@
         </p>
       <br> 
         <p>
-          4.Cover on low heat for 10 minutes, then turn off heat and let it cool. <button class="text-black bg-red-200 hover:bg-red-300 font-medium rounded-full text-sm px-5 text-center">Timer</button>
+          4.Cover on low heat for 10 minutes, then turn off heat and let it cool. <button class="text-black bg-orange-200 hover:bg-orange-300 font-medium rounded-full text-sm px-5 text-center">Timer</button>
         </p>
       <br> 
         <p>
@@ -71,13 +71,16 @@
       <br> 
         <p>
           6.Pour the contents of the blender through a fine-mesh strainer into a large bowl. 
-          Push the blended marinade through the strainer until no liquid remains. Discard the solids <button class="text-black bg-orange-200 hover:bg-orange-300 font-medium rounded-full text-sm px-5 text-center before:content-['Chef_Note'] hover:before:content-['You_can_also_keep_the_solids_to_make_an_incredible_salsa...']">
+          Push the blended marinade through the strainer until no liquid remains. Discard the solids 
+          <button class="group flex relative">
+            <span class="text-black bg-red-500 hover:bg-red-300 font-medium rounded-full text-sm px-5 text-center">Chef Note</span>
+            <span class="group-hover:opacity-75 transition-opacity bg-white px-2 text-sm text-black rounded-lg absolute opacity-0 m-5 mx-auto">the_Chicken_Thighs_will_continue_to_cook_while_they_rest,_so_make_sure_you_plan_for_that_in_your_cooking_time_and_temperature</span> 
         </button>
         </p>
       <br> 
         <p>
           7.Mix the Pork slices into the large bowl of marinade until they are coated. 
-          Cover and put back into the refrigerator to marinate for 4-24 hours. <button class="text-black bg-red-200 hover:bg-red-300 font-medium rounded-full text-sm px-5 text-center">Timer</button>
+          Cover and put back into the refrigerator to marinate for 4-24 hours. <button class="text-black bg-orange-200 hover:bg-orange-300 font-medium rounded-full text-sm px-5 text-center">Timer</button>
         </p>
       <br>
       </article>
@@ -87,7 +90,10 @@
       <h4>Cooking the Pork</h4>
       <article class="indent-5">
         <p>
-          1.Preheat your bbq grill to as hot as possible. <button class="text-black bg-orange-200 hover:bg-orange-300 font-medium rounded-full text-sm px-5 text-center before:content-['Chef_Note'] hover:before:content-['A_little_char_of_the_marinade_on_the_pork_brings_out_incredible_flavors']">
+          1.Preheat your bbq grill to as hot as possible. 
+          <button class="group flex relative">
+            <span class="text-black bg-red-500 hover:bg-red-300 font-medium rounded-full text-sm px-5 text-center">Chef Note</span>
+            <span class="group-hover:opacity-75 transition-opacity bg-white px-2 text-sm text-black rounded-lg absolute opacity-0 m-5 mx-auto">the_Chicken_Thighs_will_continue_to_cook_while_they_rest,_so_make_sure_you_plan_for_that_in_your_cooking_time_and_temperature</span> 
         </button>
         </p>
     <br> 
@@ -100,7 +106,7 @@
       </p>
     <br>
       <p>
-          4.Once cooked fully, remove the Pork from the Grill and let it rest for a minimum of 10 minutes <button class="text-black bg-red-200 hover:bg-red-300 font-medium rounded-full text-sm px-5 text-center">Timer</button>
+          4.Once cooked fully, remove the Pork from the Grill and let it rest for a minimum of 10 minutes <button class="text-black bg-orange-200 hover:bg-orange-300 font-medium rounded-full text-sm px-5 text-center">Timer</button>
       </p>
     <br> 
       <p>
