--- a/CauliflowerTacos.html
+++ b/CauliflowerTacos.html
@@ -46,16 +46,25 @@
             3. Toss Cauliflower in a large bowl with the Cumin, Ancho Chili Powder, Paprika, and Salt.
           </p>
           <br />
-          <div id="cookingTimer">
-          <p id="cookingTimerDisplay" class="">
-            4. Spread the Cauliflower on a lined baking sheet and place on the bottom rack of the oven to roast for 20min <button class="text-black bg-red-200 hover:bg-red-300 font-medium rounded-full text-sm px-5 text-center">Timer</button> <button class="text-black bg-orange-200 hover:bg-orange-300 font-medium rounded-full text-sm px-5 text-center before:content-['Chef_Note'] hover:before:content-['Check_Cauliflower_at_20_min,_if_it_is_not_golden_brown_and_tender,_roast_for_another_5_min']">
+          <p>
+            4. Spread the Cauliflower on a lined baking sheet and place on the bottom rack of the oven to roast for 20min 
+            <button class="text-black bg-orange-200 hover:bg-orange-300 font-medium rounded-full text-sm px-5 text-center">Timer</button>
+            <button class="group flex relative">
+              <span class="text-black bg-red-500 hover:bg-red-300 font-medium rounded-full text-sm px-5 text-center">Chef Note</span>
+              <span class="group-hover:opacity-75 transition-opacity bg-white px-2 text-sm text-black rounded-lg absolute opacity-0 m-5 mx-auto">the_Chicken_Thighs_will_continue_to_cook_while_they_rest,_so_make_sure_you_plan_for_that_in_your_cooking_time_and_temperature</span> 
           </button>
+            <!-- <button class="text-black bg-red-200 hover:bg-red-300 font-medium rounded-full text-sm px-5 text-center">Timer</button> <button class="text-black bg-orange-200 hover:bg-orange-300 font-medium rounded-full text-sm px-5 text-center before:content-['Chef_Note'] hover:before:content-['Check_Cauliflower_at_20_min,_if_it_is_not_golden_brown_and_tender,_roast_for_another_5_min']"> -->
+          <!-- </button> -->
           </p>
-        </div>
           <br />
           <p>
-            5. Remove from the Oven, prepare the tacos, and serve as fresh as possible <button class="text-black bg-orange-200 hover:bg-orange-300 font-medium rounded-full text-sm px-5 text-center before:content-['Chef_Note'] hover:before:content-['Prepare_the_taco_components_before_the_Cauliflower_is_done_roasting_so_you_can_build_the_tacos_and_serve_immediately']">
+            5. Remove from the Oven, prepare the tacos, and serve as fresh as possible 
+            <button class="group flex relative">
+              <span class="text-black bg-red-500 hover:bg-red-300 font-medium rounded-full text-sm px-5 text-center">Chef Note</span>
+              <span class="group-hover:opacity-75 transition-opacity bg-white px-2 text-sm text-black rounded-lg absolute opacity-0 m-5 mx-auto">the_Chicken_Thighs_will_continue_to_cook_while_they_rest,_so_make_sure_you_plan_for_that_in_your_cooking_time_and_temperature</span> 
           </button>
+            <!-- <button class="text-black bg-orange-200 hover:bg-orange-300 font-medium rounded-full text-sm px-5 text-center before:content-['Chef_Note'] hover:before:content-['Prepare_the_taco_components_before_the_Cauliflower_is_done_roasting_so_you_can_build_the_tacos_and_serve_immediately']">
+          </button> -->
           </p>
         </article>
         </section>
@@ -68,9 +77,10 @@
             </p>  
             <br />
             <p>
-              2. Roast the Almonds and Garlic Cloves with Skin on the middle rack for 8min <button class="text-black bg-red-200 hover:bg-red-300 font-medium rounded-full text-sm px-5 text-center">Timer</button> <button class="text-black bg-orange-200 hover:bg-orange-300 font-medium rounded-full text-sm px-5 text-center before:content-['Chef_Note'] hover:before:content-['Check_at_8min_to_see_if_the_Almonds_are_dark_and_starting_to_split;_if_not_continue_roasting-for_2-4_more_minutes_-_do_not_let_the_Almonds_burn']">
+              2. Roast the Almonds and Garlic Cloves with Skin on the middle rack for 8min 
+              <!-- <button class="text-black bg-red-200 hover:bg-red-300 font-medium rounded-full text-sm px-5 text-center">Timer</button> <button class="text-black bg-orange-200 hover:bg-orange-300 font-medium rounded-full text-sm px-5 text-center before:content-['Chef_Note'] hover:before:content-['Check_at_8min_to_see_if_the_Almonds_are_dark_and_starting_to_split;_if_not_continue_roasting-for_2-4_more_minutes_-_do_not_let_the_Almonds_burn']">
 
-            </button>
+            </button> -->
             
             </p>
             <br />
@@ -108,8 +118,14 @@
               </p>
               <br />
               <p>
-                3. Rinse and very thinly slice the Red Cabbage <button class="text-black bg-orange-200 hover:bg-orange-300 font-medium rounded-full text-sm px-5 text-center before:content-['Chef_Note'] hover:before:content-['Also_very_good_if_it_is_cold_from_the_refrigerator_at_time_of_plating']">
-              </button>
+                3. Rinse and very thinly slice the Red Cabbage 
+                <button class="text-black bg-orange-200 hover:bg-orange-300 font-medium rounded-full text-sm px-5 text-center">Timer</button>
+            <button class="group flex relative">
+              <span class="text-black bg-red-500 hover:bg-red-300 font-medium rounded-full text-sm px-5 text-center">Chef Note</span>
+              <span class="group-hover:opacity-75 transition-opacity bg-white px-2 text-sm text-black rounded-lg absolute opacity-0 m-5 mx-auto">the_Chicken_Thighs_will_continue_to_cook_while_they_rest,_so_make_sure_you_plan_for_that_in_your_cooking_time_and_temperature</span> 
+          </button>
+                <!-- <button class="text-black bg-orange-200 hover:bg-orange-300 font-medium rounded-full text-sm px-5 text-center before:content-['Chef_Note'] hover:before:content-['Also_very_good_if_it_is_cold_from_the_refrigerator_at_time_of_plating']">
+              </button> -->
              
               </p>
               <br />
