updated Chefs note to be flex-inline with text

--- a/CauliflowerTacos.html
+++ b/CauliflowerTacos.html
@@ -49,7 +49,7 @@
           <p>
             4. Spread the Cauliflower on a lined baking sheet and place on the bottom rack of the oven to roast for 20min 
             <button class="text-black bg-orange-200 hover:bg-orange-300 font-medium rounded-full text-sm px-5 text-center">Timer</button>
-            <button class="group flex relative">
+            <button class="group flex-line relative">
               <span class="text-black bg-red-500 hover:bg-red-300 font-medium rounded-full text-sm px-5 text-center">Chef Note</span>
               <span class="group-hover:opacity-75 transition-opacity bg-white px-2 text-sm text-black rounded-lg absolute opacity-0 m-5 mx-auto">the_Chicken_Thighs_will_continue_to_cook_while_they_rest,_so_make_sure_you_plan_for_that_in_your_cooking_time_and_temperature</span> 
           </button>
@@ -59,7 +59,7 @@
           <br />
           <p>
             5. Remove from the Oven, prepare the tacos, and serve as fresh as possible 
-            <button class="group flex relative">
+            <button class="group flex-line relative">
               <span class="text-black bg-red-500 hover:bg-red-300 font-medium rounded-full text-sm px-5 text-center">Chef Note</span>
               <span class="group-hover:opacity-75 transition-opacity bg-white px-2 text-sm text-black rounded-lg absolute opacity-0 m-5 mx-auto">the_Chicken_Thighs_will_continue_to_cook_while_they_rest,_so_make_sure_you_plan_for_that_in_your_cooking_time_and_temperature</span> 
           </button>
@@ -120,7 +120,7 @@
               <p>
                 3. Rinse and very thinly slice the Red Cabbage 
                 <button class="text-black bg-orange-200 hover:bg-orange-300 font-medium rounded-full text-sm px-5 text-center">Timer</button>
-            <button class="group flex relative">
+            <button class="group flex-inline relative">
               <span class="text-black bg-red-500 hover:bg-red-300 font-medium rounded-full text-sm px-5 text-center">Chef Note</span>
               <span class="group-hover:opacity-75 transition-opacity bg-white px-2 text-sm text-black rounded-lg absolute opacity-0 m-5 mx-auto">the_Chicken_Thighs_will_continue_to_cook_while_they_rest,_so_make_sure_you_plan_for_that_in_your_cooking_time_and_temperature</span> 
           </button>
