--- a/ChipotleChicken.html
+++ b/ChipotleChicken.html
@@ -42,7 +42,7 @@
           <!-- fix chef note, put in pop up-->
           <p>
             1. Place the Chicken Thighs in a resealable bag, or large bowl.
-            <button class="group flex relative">
+            <button class="group flex-inline relative">
               <span class="text-black bg-red-500 hover:bg-red-300 font-medium rounded-full text-sm px-5 text-center">Chef Note</span>
               <span class="group-hover:opacity-75 transition-opacity bg-white px-2 text-sm text-black rounded-lg absolute opacity-0 m-5 mx-auto">the_Chicken_Thighs_will_continue_to_cook_while_they_rest,_so_make_sure_you_plan_for_that_in_your_cooking_time_and_temperature</span> 
           </button>
@@ -63,7 +63,7 @@
           <p>
             4. Allow the meat to marinate for at least an hour.
             <button class="text-black bg-orange-200 hover:bg-orange-300 font-medium rounded-full text-sm px-5 text-center">Timer</button>
-            <button class="group flex relative">
+            <button class="group flex-inline relative">
               <span class="text-black bg-red-500 hover:bg-red-300 font-medium rounded-full text-sm px-5 text-center">Chef Note</span>
               <span class="group-hover:opacity-75 transition-opacity bg-white px-2 text-sm text-black rounded-lg absolute opacity-0 m-5 mx-auto">the_Chicken_Thighs_will_continue_to_cook_while_they_rest,_so_make_sure_you_plan_for_that_in_your_cooking_time_and_temperature</span> 
           </button>
@@ -80,7 +80,7 @@
           <!-- fix chef note, put in pop up, need to add countdown timer -->
           <p>
             1. Remove the Chicken Thighs from the refrigerator.
-            <button class="group flex relative">
+            <button class="group flex-inline relative">
               <span class="text-black bg-red-500 hover:bg-red-300 font-medium rounded-full text-sm px-5 text-center">Chef Note</span>
               <span class="group-hover:opacity-75 transition-opacity bg-white px-2 text-sm text-black rounded-lg absolute opacity-0 m-5 mx-auto">the_Chicken_Thighs_will_continue_to_cook_while_they_rest,_so_make_sure_you_plan_for_that_in_your_cooking_time_and_temperature</span> 
           </button>
@@ -91,7 +91,7 @@
           <!-- fix chef note, put it in pop up -->
           <p>
             2. Preheat your BBQ grill before cooking.
-            <button class="group flex relative">
+            <button class="group flex-inline relative">
               <span class="text-black bg-red-500 hover:bg-red-300 font-medium rounded-full text-sm px-5 text-center">Chef Note</span>
               <span class="group-hover:opacity-75 transition-opacity bg-white px-2 text-sm text-black rounded-lg absolute opacity-0 m-5 mx-auto">the_Chicken_Thighs_will_continue_to_cook_while_they_rest,_so_make_sure_you_plan_for_that_in_your_cooking_time_and_temperature</span> 
           </button>
@@ -107,7 +107,7 @@
           <p>
             4. Cook the Chicken Thighs until they are cooked through; 165-175
             degrees internal temperature.
-            <button class="group flex relative">
+            <button class="group flex-inline relative">
               <span class="text-black bg-red-500 hover:bg-red-300 font-medium rounded-full text-sm px-5 text-center">Chef Note</span>
               <span class="group-hover:opacity-75 transition-opacity bg-white px-2 text-sm text-black rounded-lg absolute opacity-0 m-5 mx-auto">the_Chicken_Thighs_will_continue_to_cook_while_they_rest,_so_make_sure_you_plan_for_that_in_your_cooking_time_and_temperature</span> 
           </button>
@@ -125,7 +125,7 @@
             cooked, then serve in your favorite tacos, burritos, or as a
             stand-alone meat with your meal.
             <button class="text-black bg-orange-200 hover:bg-orange-300 font-medium rounded-full text-sm px-5 text-center">Timer</button>
-            <button class="group flex relative">
+            <button class="group flex-inline relative">
               <span class="text-black bg-red-500 hover:bg-red-300 font-medium rounded-full text-sm px-5 text-center">Chef Note</span>
               <span class="group-hover:opacity-75 transition-opacity bg-white px-2 text-sm text-black rounded-lg absolute opacity-0 m-5 mx-auto">the_Chicken_Thighs_will_continue_to_cook_while_they_rest,_so_make_sure_you_plan_for_that_in_your_cooking_time_and_temperature</span> 
           </button>
