--- a/AlPastor.html
+++ b/AlPastor.html
@@ -72,7 +72,7 @@
         <p>
           6.Pour the contents of the blender through a fine-mesh strainer into a large bowl. 
           Push the blended marinade through the strainer until no liquid remains. Discard the solids 
-          <button class="group flex relative">
+          <button class="group flex-inline relative">
             <span class="text-black bg-red-500 hover:bg-red-300 font-medium rounded-full text-sm px-5 text-center">Chef Note</span>
             <span class="group-hover:opacity-75 transition-opacity bg-white px-2 text-sm text-black rounded-lg absolute opacity-0 m-5 mx-auto">the_Chicken_Thighs_will_continue_to_cook_while_they_rest,_so_make_sure_you_plan_for_that_in_your_cooking_time_and_temperature</span> 
         </button>
@@ -91,7 +91,7 @@
       <article class="indent-5">
         <p>
           1.Preheat your bbq grill to as hot as possible. 
-          <button class="group flex relative">
+          <button class="group flex-inline relative">
             <span class="text-black bg-red-500 hover:bg-red-300 font-medium rounded-full text-sm px-5 text-center">Chef Note</span>
             <span class="group-hover:opacity-75 transition-opacity bg-white px-2 text-sm text-black rounded-lg absolute opacity-0 m-5 mx-auto">the_Chicken_Thighs_will_continue_to_cook_while_they_rest,_so_make_sure_you_plan_for_that_in_your_cooking_time_and_temperature</span> 
         </button>
