--- a/BirriaBeef.html
+++ b/BirriaBeef.html
@@ -43,7 +43,8 @@
         <br />
         <p>
           3. Heat Olive Oil in a Large Dutch Oven, and sear all sides of the seasoned Chuck Roast on 
-          medium-high heat <button class="group flex relative">
+          medium-high heat 
+          <button class="group flex-inline relative">
             <span class="text-black bg-red-500 hover:bg-red-300 font-medium rounded-full text-sm px-5 text-center">Chef Note</span>
             <span class="group-hover:opacity-75 transition-opacity bg-white px-2 text-sm text-black rounded-lg absolute opacity-0 m-5 mx-auto">the_Chicken_Thighs_will_continue_to_cook_while_they_rest,_so_make_sure_you_plan_for_that_in_your_cooking_time_and_temperature</span> 
         </button>
@@ -59,7 +60,8 @@
       <h3>Prepare the Marinade:</h3>
       <article class="indent-5">
         <p>
-          1. Rinse, stem, and seed the Guajillo, Ancho, and Árbol chiles, and add them to a medium-sized pot <button class="group flex relative">
+          1. Rinse, stem, and seed the Guajillo, Ancho, and Árbol chiles, and add them to a medium-sized pot 
+          <button class="group flex-inline relative">
             <span class="text-black bg-red-500 hover:bg-red-300 font-medium rounded-full text-sm px-5 text-center">Chef Note</span>
             <span class="group-hover:opacity-75 transition-opacity bg-white px-2 text-sm text-black rounded-lg absolute opacity-0 m-5 mx-auto">the_Chicken_Thighs_will_continue_to_cook_while_they_rest,_so_make_sure_you_plan_for_that_in_your_cooking_time_and_temperature</span> 
         </button>
@@ -82,7 +84,7 @@
          <br />
          <p>
           6. Reduce the heat to low, cover, and let the pot simmer for 10min 
-          <button class="group flex relative">
+          <button class="group flex-inline relative">
             <span class="text-black bg-red-500 hover:bg-red-300 font-medium rounded-full text-sm px-5 text-center">Chef Note</span>
             <span class="group-hover:opacity-75 transition-opacity bg-white px-2 text-sm text-black rounded-lg absolute opacity-0 m-5 mx-auto">the_Chicken_Thighs_will_continue_to_cook_while_they_rest,_so_make_sure_you_plan_for_that_in_your_cooking_time_and_temperature</span> 
         </button>
@@ -90,7 +92,7 @@
          <br />
          <p>
            7. after 10min, using a slotted spoon, transfer the ingredients to a blender or food processor (SAVE THE WATER!)
-           <button class="group flex relative">
+           <button class="group flex-inline relative">
             <span class="text-black bg-red-500 hover:bg-red-300 font-medium rounded-full text-sm px-5 text-center">Chef Note</span>
             <span class="group-hover:opacity-75 transition-opacity bg-white px-2 text-sm text-black rounded-lg absolute opacity-0 m-5 mx-auto">the_Chicken_Thighs_will_continue_to_cook_while_they_rest,_so_make_sure_you_plan_for_that_in_your_cooking_time_and_temperature</span> 
         </button>
@@ -131,7 +133,7 @@
     <section section class="p-4 bg-white bg-opacity-40 rounded w-max mx-auto">
       <p>
         Serve as a stew with cilantro and white onions, or in tacos, burritos, etc. 
-        <button class="group flex relative">
+        <button class="group flex-inline relative">
           <span class="text-black bg-red-500 hover:bg-red-300 font-medium rounded-full text-sm px-5 text-center">Chef Note</span>
           <span class="group-hover:opacity-75 transition-opacity bg-white px-2 text-sm text-black rounded-lg absolute opacity-0 m-5 mx-auto">the_Chicken_Thighs_will_continue_to_cook_while_they_rest,_so_make_sure_you_plan_for_that_in_your_cooking_time_and_temperature</span> 
       </button>
