--- a/CarneAsada.html
+++ b/CarneAsada.html
@@ -99,7 +99,7 @@
         <article class="indent-5">
           <p>
             1.Put your grill on as high of heat as possible. 
-            <button class="group flex relative">
+            <button class="group flex-inline relative">
               <span class="text-black bg-red-500 hover:bg-red-300 font-medium rounded-full text-sm px-5 text-center">Chef Note</span>
               <span class="group-hover:opacity-75 transition-opacity bg-white px-2 text-sm text-black rounded-lg absolute opacity-0 m-5 mx-auto">the_Chicken_Thighs_will_continue_to_cook_while_they_rest,_so_make_sure_you_plan_for_that_in_your_cooking_time_and_temperature</span> 
           </button>
@@ -114,7 +114,7 @@
           <p>
             3. Cook the Arrachera until desired temperature 
             <!-- <button class="text-black bg-orange-200 hover:bg-orange-300 font-medium rounded-full text-sm px-5 text-center before:content-['Chef_Note'] hover:before:content-['The_thin_Arrachera_cooks_very_fast_so_do_not_leave_it_unattended!']"></button> -->
-            <button class="group flex relative">
+            <button class="group flex-inline relative">
               <span class="text-black bg-red-500 hover:bg-red-300 font-medium rounded-full text-sm px-5 text-center">Chef Note</span>
               <span class="group-hover:opacity-75 transition-opacity bg-white px-2 text-sm text-black rounded-lg absolute opacity-0 m-5 mx-auto">the_Chicken_Thighs_will_continue_to_cook_while_they_rest,_so_make_sure_you_plan_for_that_in_your_cooking_time_and_temperature</span> 
           </button>
