cleaning up file structure and dark theme changes.

--- a/index.html
+++ b/index.html
@@ -11,17 +11,16 @@
     />
     <link rel="stylesheet" href="./assets/css/style.css" />
     <script src="https://cdn.tailwindcss.com"></script>
-    <script src="./assets/js/tailwind.config.js"></script>
-    <script defer src="./assets/js/menu.js"></script>
-    <script defer src="./assets/js/theme.js"></script>
+    <script defer src="./assets/js/tailwind.config.js"></script>
+    <script defer src="./assets/js/logic.js"></script>
   </head>
   <body
-    class="homepage-bg dark:bg-black relative text-black dark:text-white dark:bg-opacity-50"
+    class="bg-home bg-fixed bg-cover bg-contain bg-no-repeat bg-center text-black dark:text-white"
   >
     <header>
       <button
         id="menuButton"
-        class="absolute top-10 left-10 p-2 bg-gray-800 bg-opacity-30 text-white rounded"
+        class="absolute top-10 left-10 p-2 bg-gray-800 bg-opacity-30 text-white dark:text-gray-300 rounded"
       >
         Menu
       </button>
