--- a/recipe-ChipotleChicken.html
+++ b/recipe-ChipotleChicken.html
@@ -92,7 +92,7 @@
         >
           Generate Shopping List</button
         ><a
-          href="./AlPastor.html"
+          href="./ChipotleChicken.html"
           class="m-4 p-2 bg-gray-800 bg-opacity-50 text-white rounded"
         >
           I have everything! Let's Cook!
