--- a/about.html
+++ b/about.html
@@ -10,13 +10,11 @@
       type="image/png"
     />
     <link rel="stylesheet" href="./assets/css/style.css" />
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css"
-    />
-    <script defer src="./assets/js/menu.js"></script>
+    <script src="https://cdn.tailwindcss.com"></script>
+    <script defer src="./assets/js/tailwind.config.js"></script>
+    <script defer src="./assets/js/logic.js"></script>
   </head>
-  <body class="about-bg relative">
+  <body class="bg-about relative">
     <header
       id="logoBackgroundSmall"
       class="bg-gradient-to-r from-transparent to-white flex-shrink"
@@ -86,16 +84,7 @@
           <img class="bioImage" src="" alt="" />
           <h2 class="m-2 p-2 text-4xl font-medium">Jesse Anderson</h2>
           <p>
-            Jesse Anderson, a coding bootcamp student and proud bachelor living
-            in Utah, has the unique distinction of working in a cave—literally.
-            By day, he navigates the stalagmites and stalactites of both the
-            underground and the digital realm, coding away with only bats for
-            company and Wi-Fi that sometimes feels prehistoric. His evenings are
-            a mix of debugging code and dodging cave crickets, all while
-            mastering the art of singlehood with a sense of humor as dry as the
-            cave air. Jesse’s life is a comedic blend of spelunking and syntax
-            errors, proving that even in the depths of a cave, one can still
-            aspire to be a tech wizard.
+            Jesse Anderson, a coding bootcamp student and bachelor residing in Utah, expertly navigates the rugged terrain of both land surveying and coding. A former rock climber, he now scales the heights of JavaScript and HTML instead of sandstone cliffs. By day, Jesse maps out the great outdoors with precision, and by night, he maps out his coding dreams on his laptop. His life is a unique blend of topographical maps and terminal commands, peppered with the occasional memory of adrenaline-fueled climbs. Jesse’s journey from summits to syntax showcases his ability to conquer any challenge, whether it be a mountain face or a mountain of code.
           </p>
           <section class="flex flex-row justify-center m-4">
             <a
@@ -169,7 +158,6 @@
           >Project 1</a
         >
       </section>
-
     </main>
   </body>
 </html>
