update head script sources.

--- a/AlPastor.html
+++ b/AlPastor.html
@@ -7,7 +7,9 @@
     <link rel="stylesheet" href="./assets/css/cooking.css" />
     <link rel="stylesheet" href="./assets/css/style.css" />
     <script src="https://cdn.tailwindcss.com"></script>
-    <script defer src="./assets/js/homepage.js"></script>
+    <script defer src="./assets/js/tailwind.config.js"></script>
+    <script defer src="./assets/js/cooking.js"></script>
+    <script defer src="./assets/js/logic.js"></script>
   </head>
   <body
   class="alPastor-bg relative"
@@ -115,7 +117,5 @@
     <br>
       </article>
     </section>  
-
-    <script src="cooking.js"></script>
   </body>
 </html>
