--- a/BirriaBeef.html
+++ b/BirriaBeef.html
@@ -7,7 +7,9 @@
     <link rel="stylesheet" href="cooking.css"/>
     <link rel="stylesheet" href="./assets/css/style.css"/>
     <script src="https://cdn.tailwindcss.com"></script>
-    <script defer src="./assets/js/menu.js"></script>
+    <script defer src="./assets/js/tailwind.config.js"></script>
+    <script defer src="./assets/js/cooking.js"></script>
+    <script defer src="./assets/js/logic.js"></script>
   </head>
   <body class="birria-bg relative">
     <header
@@ -139,7 +141,5 @@
       </button>
       </p>
     </section>
-
-    
   </body>
 </html>
