--- a/CauliflowerTacos.html
+++ b/CauliflowerTacos.html
@@ -7,7 +7,9 @@
     <link rel="stylesheet" href="cooking.css" />
     <link rel="stylesheet" href="./assets/css/style.css" />
     <script src="https://cdn.tailwindcss.com"></script>
-    <script defer src="./assets/js/menu.js"></script>
+    <script defer src="./assets/js/tailwind.config.js"></script>
+    <script defer src="./assets/js/cooking.js"></script>
+    <script defer src="./assets/js/logic.js"></script>
   </head>
 
   <body class="cauliflower-bg relative">
@@ -192,7 +194,6 @@
           </p>
         </article>
       </section>
-      <script src="./assets/js/cooking.js"></script>
     </main>
   </body>
 </html>
