--- a/ChipotleChicken.html
+++ b/ChipotleChicken.html
@@ -7,8 +7,9 @@
     <link rel="stylesheet" href="./assets/css/cooking.css" />
     <link rel="stylesheet" href="./assets/css/style.css" />
     <script src="https://cdn.tailwindcss.com"></script>
-    <script defer src="./assets/js/menu.js"></script>
-
+    <script defer src="./assets/js/tailwind.config.js"></script>
+    <script src="./assets/js/cooking.js"></script>
+    <script defer src="./assets/js/logic.js"></script>
   </head>
 
   <!-- need to add light and dark mode -->
@@ -133,7 +134,6 @@
         <br />
       </section>
     </main>
-    <script src="./assets/js/cooking.js"></script>
   </body>
 </html>
 
