added timer to cauliflowertaco html

--- a/CauliflowerTacos.html
+++ b/CauliflowerTacos.html
@@ -48,7 +48,7 @@
           <br />
           <p>
             4. Spread the Cauliflower on a lined baking sheet and place on the bottom rack of the oven to roast for 20min 
-            <button class="text-black bg-orange-200 hover:bg-orange-300 font-medium rounded-full text-sm px-5 text-center">Timer</button>
+            <button id="timer5" class="text-black bg-orange-200 hover:bg-orange-300 font-medium rounded-full text-sm px-5 text-center">Timer</button>
             <button class="group flex-line relative">
               <span class="text-black bg-red-500 hover:bg-red-300 font-medium rounded-full text-sm px-5 text-center">Chef Note</span>
               <span class="group-hover:opacity-75 transition-opacity bg-white px-2 text-sm text-black rounded-lg absolute opacity-0 m-5 mx-auto">the_Chicken_Thighs_will_continue_to_cook_while_they_rest,_so_make_sure_you_plan_for_that_in_your_cooking_time_and_temperature</span> 
@@ -140,6 +140,21 @@
             </article>
           </section>
           <br />
+          <section class="p-4 bg-white bg-opacity-40 rounded w-max mx-auto">
+            <h6>Make the Chipotle Sauce:</h6>
+            <article article class="indent-5">
+            <p>
+              1. On another lined baking sheet, add the 1/4 cup of Raw Almonds and 4 Garlic Cloves with skin.
+            </p>
+            <br>
+            <p>
+              2. Roast the Almonds and Garlic Cloves with Skin on the middle rack for 8min 
+              *Chef Note: Check at 8min to see if the Almonds are dark and starting to split; if not continue roasting for 2-4 more minutes - do not let the Almonds burn
+            </p>
+            <br>
+            <p>
+              3
+            </p>
           <p>
             4. Drain the can of Fire-Roasted Tomatoes and add to a blender or
             food processor along with the roasted Almonds, roasted Garlic Cloves
@@ -192,7 +207,7 @@
           </p>
         </article>
       </section>
-      <script src="./assets/js/cooking.js"></script>
     </main>
+    <script src="./assets/js/cooking.js"></script>
   </body>
 </html>
